# todaymarks

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: NATIVE_APP_FRAMEWORK.md
scripts/: install.sh  release.sh  run-app.sh  setup-signing.sh
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  debug.rs  feed.rs  ics.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/providers/: apple.rs  local.rs  mod.rs
src/components/: AgendaPanel.tsx  CalendarsModal.tsx  CameraModal.tsx  DateTimeField.tsx  DayPeekPopover.tsx  EventModal.tsx  Header.tsx  Icons.tsx  NotificationScheduler.tsx  SearchModal.tsx  SettingsModal.tsx  SnoozeMenu.tsx  TimeGrid.tsx  UndoToast.tsx  UpdateBanner.tsx  WeekRow.tsx
src/lib/: api.ts  changelog.ts  colors.ts  date.ts  layout.ts  links.ts  types.ts  updater.ts
src/styles/: index.css
